src/index.scss
// reset

input:focus,
select:focus,
textarea:focus,
button:focus,
span:focus {
  outline: none !important;
}

// colors

$color-blue-dark: #295882;
$color-blue: #29719b;
$color-blue-light: #6991AA;

$color-pink: #FF405E;
$color-pink-dark: #C33750;

$color-white: #F0F5FA;

$color-green: #00ff00;
$color-green-dark: rgba(#00ff00, 0.2);
$color-yellow: #f1c40f;
$color-yellow-dark: #9b790d;

$color-bg: #141e2d;
$color-bg-dark: #0f1523;

$color-text: #b9c8d2;
$color-text-dark: #6991AA;

$font-small: 12px;
$font-medium: 14px;
$font-big: 18px;
$font-really-big: 24px;

$font-weight-light: 300;
$font-weight-regular: 500;
$font-weight-bold: 700;

@mixin box-shadow($color) {
  -webkit-box-shadow: 0 0 4px 2px $color;
  -moz-box-shadow: 0 0 4px 2px $color;
  box-shadow: 0 0 4px 2px $color;
}

body {
  background: linear-gradient(to right bottom, $color-bg, $color-bg-dark);
  color: $color-text;
  overflow: hidden;
}

.page {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  position: relative;
}

menu {
  padding: 0;
  margin: 0;
  z-index: 999;
  position: relative;
  @include box-shadow($color-blue-dark);

  nav {
    background: $color-bg-dark !important;
    overflow-y: scroll;
  }

  .navbar {
    margin-bottom: 0;
    border: none;

    .stats {
      display: flex;
      align-items: center;
      height: 50px;
      padding-top: 8px;
      font-size: $font-medium;
      font-weight: $font-weight-regular;

      .stat-value {
        color: $color-text;
      }

      .stat-label {
        color: $color-text-dark;
      }

      .stat-content {
        .detail {
          color: $color-text-dark;
        }
      }
    }

    .disconnected {
      display: flex;
      align-items: center;
      height: 50px;
      font-size: 16px !important;
      font-weight: 500;
      color: $color-pink;
    }
  }
}

.navbar-default .navbar-nav > li > a {
  color: $color-text !important;
  font-size: 16px;
  font-weight: $font-weight-light;
  letter-spacing: 1px;
  padding-top: 18px;
}

.navbar-default .navbar-nav > .active > a {
  background: $color-pink none !important;
  color: ghostwhite !important;
}

.navbar-default .navbar-nav > .deployable > a {
  text-decoration: overline;
  text-decoration-style: double;
}

.vamp-page-header {
  margin: 0;
  padding: 0;
  align-items: center;

  .header-row {
    margin: 0 0 -20px 0;
    padding: 0 !important;
  }

  .header-column {
    margin: 0 -5px;
    padding: 0;
    height: 75px;
    line-height: 75px;

    &.title {
      font-size: $font-really-big;
      text-transform: uppercase;
      color: $color-text;
      font-weight: $font-weight-light;
      letter-spacing: 0.05em;
      margin: 0;
      padding: 0;
    }

    &.message {
      margin: 0;
      padding: 0;
      font-size: $font-big;
    }

    &.buttons {
      margin: 0;
      padding: 0;
    }
  }

  &.error {
    background-color: rgba($color-pink, 0.4);
  }
}

.label-success {
  background-color: $color-green-dark;
  color: $color-white;
}

.label-primary {
  background-color: $color-blue;
}

.label-info {
  color: $color-white;
  background-color: $color-yellow-dark;
}

.editor {
  position: absolute;
  top: 80px;
  left: 0;
  right: 0;
  bottom: 0;
}

edit, add {
  .message-truncated span {
    &:hover {
      cursor: pointer;
    }
  }
  .message-expand-icon {
    margin-left: 15px;
    cursor: pointer;
    color: $color-text-dark;
    &:hover {
      color: $color-text;
    }
  }
}

.ace_editor {
  position: absolute !important;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.alert {
  margin-bottom: 0 !important;
  border-radius: 0 !important;
}

.toast-top-right {
  top: initial;
  bottom: 15px;
  right: 15px;
}

.bars-container {
  position: absolute;
  top: 20px;
  left: 20px;
  right: 20px;
  bottom: 20px;

  background-color: rgba(black, 0.1);
  overflow: hidden;
}

.bar {
  transition: all ease-in-out 0.5s;
}

.status-col {
  * {
    margin: 0;
  }

  margin-top: 35px;

  display: flex;
  align-items: center;

  .status-text {
    height: 100%;
    line-height: 1;
    font-size: $font-really-big;
  }
}

.status {
  height: 40px;
  width: 40px;
  border-radius: 50%;
  margin: 6px;
}

.table {
  margin-bottom: 0;

  tbody > tr > td {
    vertical-align: middle !important;
    letter-spacing: 0.05em;
    color: white;
    padding: 8px 0 8px 0;
    font-size: $font-medium !important;
    font-weight: $font-weight-regular;
    border: none;
  }

  tbody > tr > th {
    border: none;
  }
}

.row-centered {
  display: flex;
  align-items: center;
}

.slider-label {
  letter-spacing: 0.05em;
  font-size: $font-medium;
}

.rz-slider {
  margin-bottom: 22px;
}

.bar-fix {
  padding: 10px 0;
}

.condition-labels {
  .label {
    margin-right: 4px;
  }
}

.condition-form {
  display: inline-block;
}

.info-panel {
  z-index: 999;
  position: fixed;
  top: 57px;
  width: 25%;
  max-width: 400px;
  bottom: 0;
  background-color: $color-bg-dark;
  color: $color-text;
  padding: 22px;
  overflow-y: scroll;
  right: -25%;
  transition: right 0.3s ease-in-out;

  .table tbody tr {
    vertical-align: bottom;
    :nth-child(1) {
      color: $color-text-dark;
      font-size: $font-small !important;
      vertical-align: bottom !important;
    }
    td {
      border: none;
      color: $color-text;
    }
  }

  span {
    margin: 0 0 20px 0;
    font-size: $font-big;
  }

  &.active {
    right: 0;
    @include box-shadow($color-blue-dark);
  }
}

.clickable {
  cursor: pointer;
}

// bootstrap overwrite

h1, h2, h3, h4, h5, h6 {
  font-family: 'Roboto', sans-serif;
}

p, div {
  font-family: 'Roboto', sans-serif;
}

.ace_editor {
  div {
    font: 12px/normal 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
  }
}
/* ... */

